tränat div box model

--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
 
 <div class="gray-box">
     <h2>html 5</h2>
-    <img src="https://lh3.googleusercontent.com/drive-storage/APZSt_cZclCsNDx9PTw4GmF8rCVT-6WsKJdtY9scQlDrF_t_AFa_waGntfHeQezpT5m4M3pKufxNdd4eSQwiHgvjMoGtxuSsRfDAaEJLrkXc=w1903-h963" alt="Html logo">
+    <img src="./img/logo_css.png" alt="Html logo">
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas laborum quam sequi error. Debitis minima aspernatur natus eos voluptate hic, reiciendis molestias rem doloribus, quod, maxime officiis vero sequi est!</p>
 </div>
 <div class="gray-box">
     <h3>css 3</h3>
-    <img src="https://lh3.googleusercontent.com/drive-storage/APZSt_dRITcTxaE9ITu_aj14aEuBxSn9NfDzC_KAgAW1Hfm8oDoCjltOoKvXm_T4B2pHbj9Y2uLZ7QiePze49yjAgH_3QZyEja7mp8juBcEw=w1903-h963" alt="css logo">
+    <img src="img/logo_html.png" alt="css logo">
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi atque saepe laboriosam molestias, incidunt veritatis quaerat ullam doloremque, assumenda quibusdam qui similique non officiis, debitis corporis. Dicta molestias impedit repellat!</p>
 </div>
 <div class="gray-box">
     <h4>javascript</h4>
-    <img src="https://lh3.googleusercontent.com/drive-storage/APZSt_dfQ5p4o_ZLhvmQEg9c2J-stWt8wlue_s00hG3roi61aOMpJRi6t8s9js9XKkQjaFGw_hxfjNDB5WrT5yWj3_GleSqKVabNlYzR7xbz=w1903-h963" alt="javascript logo">
+    <img src="img/logo_javascript.png" alt="javascript logo">
 
 </div>
-<img src="https://lh3.googleusercontent.com/drive-storage/APZSt_dtNsTo2IS7WYjmVtmwGzW-hj-tFo0FhC9iviYdwontVZkGXaReQSZ4sIs5vTPYgaPmZQ7vTcnHTadP_vgazg_1ZHSn9nyOsPH7goGv=w1903-h963" alt="html css java logo" class= center>
+<img src="img/logo-html-css-js.png" class= center>
 
 </body>
 </html>
